@@ -456,7 +456,7 @@ function get_group($_id_groupe,$tab_champs=array('all')) {
                 $temp["profs"]["users"] = array();
                 $temp["profs"]["proflist_string"] = "";
 
-                $sql_profs = "SELECT u.login, u.nom, u.prenom, u.civilite 
+                $sql_profs = "SELECT u.login, u.nom, u.prenom, u.civilite, u.email 
                   FROM utilisateurs u, j_groupes_professeurs j 
                   WHERE (u.login = j.login and j.id_groupe = '".$_id_groupe."') 
                     ORDER BY u.nom, u.prenom";
@@ -470,7 +470,7 @@ function get_group($_id_groupe,$tab_champs=array('all')) {
                     $p_prenom = casse_mot($obj_prof->prenom,'majf2');
                     $civilite = $obj_prof->civilite;
                     $temp["profs"]["list"][] = $p_login;
-                    $temp["profs"]["users"][$p_login] = array("login" => $p_login, "nom" => $p_nom, "prenom" => $p_prenom, "civilite" => $civilite);
+                    $temp["profs"]["users"][$p_login] = array("login" => $p_login, "nom" => $p_nom, "prenom" => $p_prenom, "civilite" => $civilite, "email" => $obj_prof->email);
                     $temp["profs"]["proflist_string"].=$civilite." ".$p_nom." ".my_strtoupper(mb_substr($p_prenom,0,1));
                     $i++;
                 }
